# autonomous_robot

./: README.md
dev_ws/install/: local_setup.sh  setup.sh
dev_ws/install/my_robot_controller/lib/my_robot_controller/: robot_controller
dev_ws/install/my_robot_controller/share/my_robot_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
dev_ws/install/my_robot_controller/share/my_robot_controller/cmake/: my_robot_controllerConfig-version.cmake  my_robot_controllerConfig.cmake
dev_ws/install/my_robot_controller/share/my_robot_controller/environment/: ament_prefix_path.dsv  path.dsv
dev_ws/install/package_1/lib/package_1/: talker
dev_ws/install/package_1/share/package_1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
dev_ws/install/package_1/share/package_1/cmake/: package_1Config-version.cmake  package_1Config.cmake
dev_ws/install/package_1/share/package_1/environment/: ament_prefix_path.dsv  path.dsv
dev_ws/log/: latest_build
dev_ws/src/install/: local_setup.sh  setup.sh
dev_ws/src/install/my_robot_controller/lib/my_robot_controller/: robot_controller
dev_ws/src/install/my_robot_controller/share/my_robot_controller/: local_setup.sh  (+2 more)
dev_ws/src/log/: latest_build
dev_ws/src/my_robot_controller/: CMakeLists.txt
dev_ws/src/my_robot_controller/src/: robot_controller.cpp
dev_ws/src/package_1/: CMakeLists.txt  package.xml
dev_ws/src/package_1/log/: latest_build
dev_ws/src/package_1/src/: robot_talker.cpp
(+8 files in other folders)
